--- a/scss/h5player.scss
+++ b/scss/h5player.scss
@@ -498,5 +498,9 @@ body{
 				}
 			}
 		}
+		.h5player-barrage-off{
+			background: url('../imgs/h5player/barrage_off.png') no-repeat;
+			background-size: 34px 20px;
+		}
 	}
 }
