--- a/css/h5player.css
+++ b/css/h5player.css
@@ -19,6 +19,7 @@ body {
       width: 100%;
       height: 100%; }
   .live-h5player-container .live-h5player-controlbar {
+    /*display: none;*/
     position: absolute;
     bottom: 0;
     left: 0;
@@ -407,3 +408,27 @@ body {
     .live-h5player-container .live-h5player-controlbar .h5player-barrage-off {
       background: url("../imgs/h5player/barrage_off.png") no-repeat;
       background-size: 34px 20px; }
+  .live-h5player-container .live-h5player-rightmenu {
+    display: none;
+    width: 200px;
+    border-radius: 3px;
+    overflow: hidden;
+    position: absolute;
+    background-color: #f0f0f0;
+    top: 0;
+    left: 0; }
+    .live-h5player-container .live-h5player-rightmenu .h5player-rightmenu-item {
+      padding-left: 25px;
+      height: 30px;
+      line-height: 30px;
+      text-align: left;
+      font-size: 14px;
+      color: #000;
+      cursor: pointer; }
+      .live-h5player-container .live-h5player-rightmenu .h5player-rightmenu-item:hover {
+        background-color: #d0d0d0; }
+      .live-h5player-container .live-h5player-rightmenu .h5player-rightmenu-item:first-child {
+        cursor: auto;
+        border-bottom: 2px solid rgba(0, 0, 0, 0.1); }
+        .live-h5player-container .live-h5player-rightmenu .h5player-rightmenu-item:first-child:hover {
+          background-color: #f0f0f0; }
