--- a/css/h5player.css
+++ b/css/h5player.css
@@ -150,7 +150,6 @@ body {
       .live-h5player-container .live-h5player-controlbar .h5player-definition .definition-items {
         z-index: 2;
         width: 100px;
-        height: 50px;
         text-align: center;
         border-radius: 2px;
         position: absolute;
@@ -408,6 +407,32 @@ body {
     .live-h5player-container .live-h5player-controlbar .h5player-barrage-off {
       background: url("../imgs/h5player/barrage_off.png") no-repeat;
       background-size: 34px 20px; }
+  .live-h5player-container .live-h5player-barrage {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 1px solid red; }
+    .live-h5player-container .live-h5player-barrage .h5player-barrage {
+      position: absolute;
+      top: 0;
+      color: #fff;
+      font-weight: bold;
+      line-height: 30px;
+      border: 1px solid red;
+      height: 30px;
+      display: inline-block;
+      animation: barrage 5s linear 0s;
+      visibility: hidden; }
+
+@-webkit-keyframes barrage {
+  from {
+    visibility: visible;
+    -webkit-transform: translateX(800px); }
+  to {
+    visibility: visible;
+    -webkit-transform: translateX(-200px); } }
   .live-h5player-container .live-h5player-rightmenu {
     display: none;
     width: 200px;
@@ -418,7 +443,7 @@ body {
     top: 0;
     left: 0; }
     .live-h5player-container .live-h5player-rightmenu .h5player-rightmenu-item {
-      padding-left: 25px;
+      padding-left: 15px;
       height: 30px;
       line-height: 30px;
       text-align: left;
