--- a/scss/h5player.scss
+++ b/scss/h5player.scss
@@ -183,7 +183,6 @@ body{
 			.definition-items{
 				z-index: 2;
 				width: 100px;
-				height: 50px;
 				text-align: center;
 				border-radius: 2px;
 				position: absolute;
@@ -504,6 +503,36 @@ body{
 			background-size: 34px 20px;
 		}
 	}
+	.live-h5player-barrage{
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top:0;
+		left:0;
+		border:1px solid red;
+		.h5player-barrage{
+			position: absolute;
+			top:0;
+			color:#fff;
+			font-weight: bold;
+			line-height: 30px;
+			border:1px solid red;
+			height: 30px;
+			display: inline-block;
+			animation:barrage 5s linear 0s;
+			visibility: hidden;
+		}
+		@-webkit-keyframes barrage{
+			from{
+				visibility: visible;
+				-webkit-transform: translateX(800px);
+			}
+			to{
+				visibility: visible;
+				-webkit-transform: translateX(-200px);
+			}
+		}
+	}
 	.live-h5player-rightmenu{
 		display: none;
 		width: 200px;
@@ -514,7 +543,7 @@ body{
 		top:0;
 		left:0;
 		.h5player-rightmenu-item{
-			padding-left: 25px;
+			padding-left: 15px;
 			height: 30px;
 			line-height: 30px;
 			text-align: left;
