--- a/scss/h5player.scss
+++ b/scss/h5player.scss
@@ -509,20 +509,27 @@ body{
 		position: absolute;
 		top:0;
 		left:0;
-		border:1px solid red;
-		.h5player-barrage{
+		.h5player-barrage-item{
 			position: absolute;
 			top:0;
 			color:#fff;
 			font-weight: bold;
-			line-height: 30px;
-			border:1px solid red;
-			height: 30px;
+			line-height: 28px;
+			height: 28px;
 			display: inline-block;
 			animation:barrage 5s linear 0s;
 			visibility: hidden;
+			font-size: 23px;
+			font-family: PingFangSC-Regular, SimHei, sans-serif;
+			text-align: center;
+			padding: 0 3px;
+			border:1px solid transparent;
+
 		}
-		@-webkit-keyframes barrage{
+		.h5player-barrage-item-self{
+			border:1px solid #66ffff;
+		}
+		@keyframes barrage{
 			from{
 				visibility: visible;
 				-webkit-transform: translateX(800px);
