--- a/css/h5player.css
+++ b/css/h5player.css
@@ -411,8 +411,7 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 0;
-    left: 0; }
+    top: 0; }
     .live-h5player-container .live-h5player-barrage .h5player-barrage-item {
       position: absolute;
       top: 0;
@@ -421,23 +420,15 @@ body {
       line-height: 28px;
       height: 28px;
       display: inline-block;
-      animation: barrage 5s linear 0s;
-      visibility: hidden;
+      /*animation:barrage 5s linear 0s;*/
+      /*visibility: hidden;*/
       font-size: 23px;
       font-family: PingFangSC-Regular, SimHei, sans-serif;
       text-align: center;
       padding: 0 3px;
-      border: 1px solid transparent; }
+      border: 1px solid red; }
     .live-h5player-container .live-h5player-barrage .h5player-barrage-item-self {
       border: 1px solid #66ffff; }
-
-@keyframes barrage {
-  from {
-    visibility: visible;
-    -webkit-transform: translateX(800px); }
-  to {
-    visibility: visible;
-    -webkit-transform: translateX(-200px); } }
   .live-h5player-container .live-h5player-rightmenu {
     display: none;
     width: 200px;
