--- a/scss/h5player.scss
+++ b/scss/h5player.scss
@@ -512,17 +512,18 @@ body{
 			position: absolute;
 			top:0;
 			color:#fff;
-			font-weight: bold;
 			line-height: 28px;
 			height: 28px;
 			display: inline-block;
-			/*animation:barrage 5s linear 0s;*/
-			/*visibility: hidden;*/
 			font-size: 23px;
 			font-family: PingFangSC-Regular, SimHei, sans-serif;
 			text-align: center;
 			padding: 0 3px;
-			border:1px solid red;
+			user-select: none;
+			white-space: pre;
+			pointer-events: none;
+			perspective: 500px;
+			will-change:transform;
 
 		}
 		.h5player-barrage-item-self{
