--- a/css/h5player.css
+++ b/css/h5player.css
@@ -1,8 +1,8 @@
 body {
-  width: 800px;
-  height: 450px; }
+  width: 100%; }
 
 .live-h5player-container {
+  overflow: hidden;
   width: 100%;
   height: 100%;
   background: #000;
