--- a/css/h5player.css
+++ b/css/h5player.css
@@ -430,6 +430,11 @@ body {
       pointer-events: none;
       perspective: 500px;
       will-change: transform; }
+      .live-h5player-container .live-h5player-barrage .h5player-barrage-item img {
+        width: auto;
+        height: 22px;
+        margin-left: 2px;
+        margin-top: -4px; }
     .live-h5player-container .live-h5player-barrage .h5player-barrage-item-self {
       border: 1px solid #66ffff; }
   .live-h5player-container .live-h5player-rightmenu {
