--- a/scss/h5player.scss
+++ b/scss/h5player.scss
@@ -528,7 +528,12 @@ body{
 			pointer-events: none;
 			perspective: 500px;
 			will-change:transform;
-
+			img{
+				width: auto;
+				height: 22px;
+				margin-left: 2px;
+				margin-top: -4px;
+			}
 		}
 		.h5player-barrage-item-self{
 			border:1px solid #66ffff;
