--- a/css/h5player.css
+++ b/css/h5player.css
@@ -437,6 +437,57 @@ body {
         margin-top: -4px; }
     .live-h5player-container .live-h5player-barrage .h5player-barrage-item-self {
       border: 1px solid #66ffff; }
+  .live-h5player-container .live-h5player-system {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0; }
+    .live-h5player-container .live-h5player-system .system-wrap {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      top: 0;
+      left: 0; }
+      .live-h5player-container .live-h5player-system .system-wrap .giftcombo-animation {
+        height: 28px;
+        position: absolute;
+        top: 100px;
+        left: 100px; }
+        .live-h5player-container .live-h5player-system .system-wrap .giftcombo-animation .left-bar {
+          width: 50px;
+          height: 28px;
+          background: url("../imgs/h5player/combo/0/bar0.png") no-repeat;
+          background-size: 50px 28px;
+          float: left; }
+        .live-h5player-container .live-h5player-system .system-wrap .giftcombo-animation .middle-bar {
+          width: 300px;
+          height: 28px;
+          background: url("../imgs/h5player/combo/0/bar1.png") repeat;
+          background-size: 300px 28px;
+          float: left;
+          font-size: 14px;
+          line-height: 28px;
+          z-index: 2;
+          position: relative;
+          white-space: nowrap; }
+          .live-h5player-container .live-h5player-system .system-wrap .giftcombo-animation .middle-bar .giftcombo-img {
+            width: 60px;
+            height: 60px;
+            display: block;
+            float: left;
+            margin-top: -16px;
+            margin-left: -80px; }
+          .live-h5player-container .live-h5player-system .system-wrap .giftcombo-animation .middle-bar .giftcombo-text {
+            float: left;
+            margin-left: -20px;
+            color: #fff; }
+        .live-h5player-container .live-h5player-system .system-wrap .giftcombo-animation .right-bar {
+          width: 50px;
+          height: 28px;
+          background: url("../imgs/h5player/combo/0/bar2.png") no-repeat;
+          background-size: 50px 28px;
+          float: left; }
   .live-h5player-container .live-h5player-rightmenu {
     display: none;
     width: 200px;
@@ -461,3 +512,6 @@ body {
         border-bottom: 2px solid rgba(0, 0, 0, 0.1); }
         .live-h5player-container .live-h5player-rightmenu .h5player-rightmenu-item:first-child:hover {
           background-color: #f0f0f0; }
+
+.clear {
+  clear: both; }
