--- a/css/h5player.css
+++ b/css/h5player.css
@@ -429,7 +429,9 @@ body {
       white-space: pre;
       pointer-events: none;
       perspective: 500px;
-      will-change: transform; }
+      will-change: transform;
+      font-weight: bold;
+      text-shadow: black 1px 0px 1px, black 0px 1px 1px, black 0px -1px 1px, black -1px 0px 1px; }
       .live-h5player-container .live-h5player-barrage .h5player-barrage-item img {
         width: auto;
         height: 22px;
@@ -443,51 +445,46 @@ body {
     position: absolute;
     top: 0;
     left: 0; }
-    .live-h5player-container .live-h5player-system .system-wrap {
-      width: 100%;
-      height: 100%;
-      position: relative;
-      top: 0;
-      left: 0; }
-      .live-h5player-container .live-h5player-system .system-wrap .giftcombo-animation {
+    .live-h5player-container .live-h5player-system .giftcombo-animation {
+      display: none;
+      height: 28px;
+      position: absolute;
+      top: 100px;
+      left: 100px; }
+      .live-h5player-container .live-h5player-system .giftcombo-animation .left-bar {
+        width: 50px;
         height: 28px;
-        position: absolute;
-        top: 100px;
-        left: 100px; }
-        .live-h5player-container .live-h5player-system .system-wrap .giftcombo-animation .left-bar {
-          width: 50px;
-          height: 28px;
-          background: url("../imgs/h5player/combo/0/bar0.png") no-repeat;
-          background-size: 50px 28px;
-          float: left; }
-        .live-h5player-container .live-h5player-system .system-wrap .giftcombo-animation .middle-bar {
-          width: 300px;
-          height: 28px;
-          background: url("../imgs/h5player/combo/0/bar1.png") repeat;
-          background-size: 300px 28px;
+        background: url("../imgs/h5player/combo/0/bar0.png") no-repeat;
+        background-size: 50px 28px;
+        float: left; }
+      .live-h5player-container .live-h5player-system .giftcombo-animation .middle-bar {
+        width: 300px;
+        height: 28px;
+        background: url("../imgs/h5player/combo/0/bar1.png") repeat;
+        background-size: 300px 28px;
+        float: left;
+        font-size: 14px;
+        line-height: 28px;
+        z-index: 2;
+        position: relative;
+        white-space: nowrap; }
+        .live-h5player-container .live-h5player-system .giftcombo-animation .middle-bar .giftcombo-img {
+          width: 60px;
+          height: 60px;
+          display: block;
           float: left;
-          font-size: 14px;
-          line-height: 28px;
-          z-index: 2;
-          position: relative;
-          white-space: nowrap; }
-          .live-h5player-container .live-h5player-system .system-wrap .giftcombo-animation .middle-bar .giftcombo-img {
-            width: 60px;
-            height: 60px;
-            display: block;
-            float: left;
-            margin-top: -16px;
-            margin-left: -80px; }
-          .live-h5player-container .live-h5player-system .system-wrap .giftcombo-animation .middle-bar .giftcombo-text {
-            float: left;
-            margin-left: -20px;
-            color: #fff; }
-        .live-h5player-container .live-h5player-system .system-wrap .giftcombo-animation .right-bar {
-          width: 50px;
-          height: 28px;
-          background: url("../imgs/h5player/combo/0/bar2.png") no-repeat;
-          background-size: 50px 28px;
-          float: left; }
+          margin-top: -16px;
+          margin-left: -80px; }
+        .live-h5player-container .live-h5player-system .giftcombo-animation .middle-bar .giftcombo-text {
+          float: left;
+          margin-left: -20px;
+          color: #fff; }
+      .live-h5player-container .live-h5player-system .giftcombo-animation .right-bar {
+        width: 50px;
+        height: 28px;
+        background: url("../imgs/h5player/combo/0/bar2.png") no-repeat;
+        background-size: 50px 28px;
+        float: left; }
   .live-h5player-container .live-h5player-rightmenu {
     display: none;
     width: 200px;
