--- a/scss/h5player.scss
+++ b/scss/h5player.scss
@@ -650,7 +650,7 @@ body {
             perspective: 500px;
             will-change: transform;
             font-weight: bold;
-            text-shadow: rgb(0, 0, 0) 1px 0px 1px, rgb(0, 0, 0) 0px 1px 1px, rgb(0, 0, 0) 0px -1px 1px, rgb(0, 0, 0) -1px 0px 1px;
+            text-shadow: rgba(0, 0, 0,.8) 1px 0px 1px, rgba(0, 0, 0,.8) 0px 1px 1px, rgba(0, 0, 0,.8) 0px -1px 1px, rgba(0, 0, 0,.8) -1px 0px 1px;
             img {
                 width: auto;
                 height: 22px;
@@ -668,12 +668,53 @@ body {
         position: absolute;
         top: 0;
         left: 0;
+        .system-message{
+        	display: none;
+        	height: 24px;
+        	position: absolute;
+        	top:5px;
+        	.left-bar {
+                width: 40px;
+                height: 24px;
+                background: url('../imgs/h5player/sys_0.png') no-repeat;
+                background-size: 40px 24px;
+                float: left;
+            }
+            .middle-bar {
+                height: 24px;
+                background: url('../imgs/h5player/sys_1.png') no-repeat;
+                background-size: 118px 24px;
+                float: left;
+                font-size: 14px;
+                line-height: 24px;
+                z-index: 2;
+                position: relative;
+                white-space: nowrap;
+                color: #fff;
+                .message-content {
+                    width: 60px;
+                    height: 24px;
+                    margin-left: -28px;
+                    img{
+                    	vertical-align: middle;
+                    	height: 20px;
+                    	position: relative;top:-2px;
+                    }
+                }
+            }
+            .right-bar {
+                width: 40px;
+                height: 24px;
+                background: url('../imgs/h5player/sys_2.png') no-repeat;
+                background-size: 40px 24px;
+                float: left;
+            }
+        }
         .giftcombo-animation {
             display: none;
             height: 28px;
             position: absolute;
             top: 100px;
-            left: 100px;
             .left-bar {
                 width: 50px;
                 height: 28px;
