--- a/scss/h5player.scss
+++ b/scss/h5player.scss
@@ -672,6 +672,7 @@ body {
         position: absolute;
         top: 0;
         left: 0;
+        canvas{display: none;}
         .system-message{
         	display: none;
         	height: 24px;
@@ -699,6 +700,9 @@ body {
                     width: 60px;
                     height: 24px;
                     margin-left: -28px;
+                    span{
+	                    color:#fd9d2c!important;
+                    }
                     img{
                     	vertical-align: middle;
                     	height: 20px;
