--- a/scss/h5player.scss
+++ b/scss/h5player.scss
@@ -672,7 +672,6 @@ body {
         position: absolute;
         top: 0;
         left: 0;
-        canvas{display: none;}
         .system-message{
         	display: none;
         	height: 24px;
@@ -724,6 +723,7 @@ body {
             position: absolute;
             top: 100px;
             .left-bar {
+            	display: block;
                 width: 50px;
                 height: 28px;
                 background: url('../imgs/h5player/combo/0/bar0.png') no-repeat;
@@ -741,21 +741,35 @@ body {
                 z-index: 2;
                 position: relative;
                 white-space: nowrap;
-                .giftcombo-img {
-                    width: 60px;
-                    height: 60px;
-                    display: block;
-                    float: left;
-                    margin-top: -16px;
-                    margin-left: -80px;
+                canvas{
+                	display: block;
+                	position: absolute;
+                	top:0;
+                	left:0;
                 }
-                .giftcombo-text {
-                    float: left;
-                    margin-left: -20px;
-                    color: #fff;
+                .giftcombo-content{
+                	position: absolute;
+                	top:0;
+                	left:0;
+                	width: 100%;
+                	height: 100%;
+                	.giftcombo-img {
+	                    width: 60px;
+	                    height: 60px;
+	                    display: block;
+	                    float: left;
+	                    margin-top: -16px;
+	                    margin-left: -80px;
+	                }
+	                .giftcombo-text {
+	                    float: left;
+	                    margin-left: -20px;
+	                    color: #fff;
+	                }
                 }
             }
             .right-bar {
+            	display: block;
                 width: 50px;
                 height: 28px;
                 background: url('../imgs/h5player/combo/0/bar2.png') no-repeat;
