gift combo animation

--- a/scss/h5player.scss
+++ b/scss/h5player.scss
@@ -102,6 +102,49 @@ body {
                 /* Opera */
             }
         }
+        .h5player-unsupport-autoplay{
+        	display: none;
+        	width: 100%;
+        	height: 100%;
+        	position: absolute;
+        	top:0;
+        	left:0;
+        	background: rgba(0,0,0,.6);
+        	z-index: 2;
+        	.unsupport-autoplay-box{
+        		width: 300px;
+        		height: 230px;
+        		position: absolute;
+        		top:50%;
+        		left:50%;
+        		margin-top: -115px;
+        		margin-left: -150px;
+        		.unsupport-autoplay-icon{
+	        		width: 200px;height: 100px;
+	        		display: block;
+	        		margin:0 auto;
+	        	}
+	        	.unsupport-autoplay-tip{
+	        		color:#fff;
+	        		font-size:16px;
+	        		width: 100%;height: 30px;
+	        		text-align: center;
+	        		line-height: 30px;
+	        		margin: 20px auto;
+	        	}
+	        	.unsupport-autoplay-btn{
+	        		width: 100px;height: 40px;
+	        		border-radius: 5px;
+	        		color:#fff;
+	        		background-color: #ff5959;
+	        		margin:10px auto;
+	        		text-align: center;
+	        		line-height: 40px;
+	        		cursor: pointer;
+	        	}
+        	}
+        	
+        }
     }
     .live-h5player-video-box {
         width: 100%;
@@ -743,9 +786,10 @@ body {
                 white-space: nowrap;
                 canvas{
                 	display: block;
-                	position: absolute;
-                	top:0;
-                	left:0;
+                	/*position: absolute;*/
+                	/*top:0;*/
+                	/*left:0;*/
+                	
                 }
                 .giftcombo-content{
                 	position: absolute;
@@ -753,6 +797,7 @@ body {
                 	left:0;
                 	width: 100%;
                 	height: 100%;
+                	z-index: 2;
                 	.giftcombo-img {
 	                    width: 60px;
 	                    height: 60px;
