--- a/css/h5player.css
+++ b/css/h5player.css
@@ -93,6 +93,46 @@ body {
     /* Safari 和 Chrome */
     -o-transform: rotate(360deg);
     /* Opera */ } }
+    .live-h5player-container .live-h5player-status .h5player-unsupport-autoplay {
+      display: none;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 2; }
+      .live-h5player-container .live-h5player-status .h5player-unsupport-autoplay .unsupport-autoplay-box {
+        width: 300px;
+        height: 230px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-top: -115px;
+        margin-left: -150px; }
+        .live-h5player-container .live-h5player-status .h5player-unsupport-autoplay .unsupport-autoplay-box .unsupport-autoplay-icon {
+          width: 200px;
+          height: 100px;
+          display: block;
+          margin: 0 auto; }
+        .live-h5player-container .live-h5player-status .h5player-unsupport-autoplay .unsupport-autoplay-box .unsupport-autoplay-tip {
+          color: #fff;
+          font-size: 16px;
+          width: 100%;
+          height: 30px;
+          text-align: center;
+          line-height: 30px;
+          margin: 20px auto; }
+        .live-h5player-container .live-h5player-status .h5player-unsupport-autoplay .unsupport-autoplay-box .unsupport-autoplay-btn {
+          width: 100px;
+          height: 40px;
+          border-radius: 5px;
+          color: #fff;
+          background-color: #ff5959;
+          margin: 10px auto;
+          text-align: center;
+          line-height: 40px;
+          cursor: pointer; }
   .live-h5player-container .live-h5player-video-box {
     width: 100%;
     height: 100%;
@@ -598,15 +638,16 @@ body {
         white-space: nowrap; }
         .live-h5player-container .live-h5player-system .giftcombo-animation .middle-bar canvas {
           display: block;
-          position: absolute;
-          top: 0;
-          left: 0; }
+          /*position: absolute;*/
+          /*top:0;*/
+          /*left:0;*/ }
         .live-h5player-container .live-h5player-system .giftcombo-animation .middle-bar .giftcombo-content {
           position: absolute;
           top: 0;
           left: 0;
           width: 100%;
-          height: 100%; }
+          height: 100%;
+          z-index: 2; }
           .live-h5player-container .live-h5player-system .giftcombo-animation .middle-bar .giftcombo-content .giftcombo-img {
             width: 60px;
             height: 60px;
