--- a/css/h5player.css
+++ b/css/h5player.css
@@ -140,7 +140,8 @@ body {
     margin: 0 auto; }
     .live-h5player-container .live-h5player-video-box .live-h5player-video {
       width: 100%;
-      height: 100%; }
+      height: 100%;
+      margin: 0 auto; }
   .live-h5player-container .live-h5player-controlbar {
     position: absolute;
     bottom: 0;
