--- a/scss/h5player.scss
+++ b/scss/h5player.scss
@@ -154,6 +154,7 @@ body {
         .live-h5player-video {
             width: 100%;
             height: 100%;
+            margin:0 auto;
         }
     }
     .live-h5player-controlbar {
