--- a/scss/h5player.scss
+++ b/scss/h5player.scss
@@ -269,19 +269,28 @@ body {
         }
         .h5player-fullscreen-ing {
             margin-right: 16px;
-            background: url('../imgs/h5player/fullscreen.png') no-repeat;
+            background: url('../imgs/h5player/fullscreen_exit.png') no-repeat;
             background-size: 25px 25px;
             &:hover {
-                background: url('../imgs/h5player/fullscreen_p.png') no-repeat;
+                background: url('../imgs/h5player/fullscreen_exit_p.png') no-repeat;
                 background-size: 25px 25px;
             }
             ;
         }
         .h5player-pagescreen {
-            background: url('../imgs/h5player/pagescreen.png') no-repeat;
+            background: url('../imgs/h5player/theater_mode.png') no-repeat;
             background-size: 25px 25px;
             &:hover {
-                background: url('../imgs/h5player/pagescreen_p.png') no-repeat;
+                background: url('../imgs/h5player/theater_mode_p.png') no-repeat;
+                background-size: 25px 25px;
+            }
+            ;
+        }
+        .h5player-pagescreen-ing {
+            background: url('../imgs/h5player/theater_mode_exit.png') no-repeat;
+            background-size: 25px 25px;
+            &:hover {
+                background: url('../imgs/h5player/theater_mode_exit_p.png') no-repeat;
                 background-size: 25px 25px;
             }
             ;
